# ocaml-jupyter

./: .gitattributes  .gitignore  .merlin  .ocp-indent  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  _config.yml  _oasis  _tags  core  dune-project  jupyter-archimedes.opam  jupyter.opam  kernelspec.sh  myocamlbuild.ml  setup.ml  travis.sh
.github/workflows/: ci.yaml  gh-pages.yaml  ocaml.yaml  release.yaml
api/: index.html
api/_html/: index.html
api/jupyter/: index-generated.mld  index.html  jupyter.odoc  jupyter__AnsiCode.odoc  jupyter__Comm.odoc  jupyter__Iopub.odoc  jupyter__Json.odoc  jupyter__Message.odoc  jupyter__Shell.odoc  jupyter__Stdin.odoc  jupyter__Version.odoc  page-index.odoc
api/jupyter-archimedes/: index-generated.mld  index.html  jupyter_archimedes.odoc  page-index.odoc
api/jupyter.comm/: index-generated.mld  index.html  jupyter_comm.odoc  jupyter_comm__.odoc  jupyter_comm__Manager.odoc  jupyter_comm__Router.odoc  jupyter_comm__Stdin.odoc  page-index.odoc
api/jupyter.notebook/: index-generated.mld  index.html  jupyter_notebook.odoc  jupyter_notebook__.odoc  jupyter_notebook__Unsafe.odoc  page-index.odoc
api/jupyter_completor@jupyter/: index-generated.mld  index.html  jupyter_completor.odoc  jupyter_completor__.odoc  jupyter_completor__Intf.odoc  jupyter_completor__Merlin.odoc  page-index.odoc
api/jupyter_kernel@jupyter/: index-generated.mld  index.html  jupyter_kernel.odoc  jupyter_kernel__.odoc  jupyter_kernel__Channel_intf.odoc  jupyter_kernel__Client.odoc  jupyter_kernel__Connection_info.odoc  jupyter_kernel__Hmac.odoc  jupyter_kernel__Message_channel.odoc  jupyter_kernel__Zmq_channel.odoc  page-index.odoc
api/jupyter_log@jupyter/: index-generated.mld  index.html  jupyter_log.odoc  page-index.odoc
api/jupyter_repl@jupyter/: index-generated.mld  index.html  jupyter_repl.odoc  jupyter_repl__.odoc  jupyter_repl__Compat.odoc  jupyter_repl__Error.odoc  jupyter_repl__Evaluation.odoc  jupyter_repl__Process.odoc  (+1 more)
config/: configure.ml  dune  jbuild  kernelspec.ml  ocaml-jupyter-opam-genspec  ocaml_flags.sexp
core/: Jupyter.CommMessage.html  Jupyter.IopubMessage.html  Jupyter.Json.html  Jupyter.KernelMessage.html  Jupyter.Message.html  Jupyter.ShellMessage.html  Jupyter.StdinMessage.html  Jupyter.Version.html  Jupyter.html  JupyterCommMessage.html  JupyterIopubMessage.html  JupyterJson.html  JupyterKernelMessage.html  JupyterMessage.html  JupyterShellMessage.html  JupyterStdinMessage.html  JupyterVersion.html  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Jupyter.CommMessage.html  type_Jupyter.IopubMessage.html  type_Jupyter.Json.html  type_Jupyter.KernelMessage.html  type_Jupyter.Message.html  type_Jupyter.ShellMessage.html  type_Jupyter.StdinMessage.html  type_Jupyter.Version.html  type_Jupyter.html  type_JupyterCommMessage.html  type_JupyterIopubMessage.html  (+6 more)
docker/: Dockerfile
gh-pages/: README.md
git/: init.sh  pre-commit
jupyter-archimedes/src/: dune  jbuild  jupyter_archimedes.ml
jupyter/src/comm/: dune  jbuild  manager.ml  manager.mli  router.ml  stdin.ml  stdin.mli
jupyter/src/completor/: dune  intf.ml  jbuild  merlin.ml  merlin.mli
jupyter/src/core/: ansiCode.ml  comm.ml  dune  iopub.ml  jbuild  json.ml  message.ml  shell.ml  stdin.ml  version.ml
jupyter/src/notebook/: dune  jbuild  jupyter_notebook.ml  jupyter_notebook.mli  unsafe.ml
jupyter/src/repl/: caml_args.cppo.ml  caml_args.mli  compat.cppo.ml  dune  error.cppo.ml  error.ml  error.mli  evaluation.cppo.ml  evaluation.ml  evaluation.mli  jbuild  jupyter_repl.ml  lwt_async_rewrite.cppo.ml  lwt_async_rewrite.ml  lwt_async_rewrite.mli  process.ml  process.mli
notebook/: JupyterNotebook.CommManager.html  JupyterNotebook.html  JupyterNotebookCommManager.Comm.html  JupyterNotebookCommManager.Target.html  JupyterNotebookCommManager.html  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_JupyterNotebook.CommManager.html  type_JupyterNotebook.html  type_JupyterNotebookCommManager.Comm.html  type_JupyterNotebookCommManager.Target.html  type_JupyterNotebookCommManager.html
notebooks/: install_ocaml_colab.ipynb  introduction.ipynb  magics.ipynb  word_description_from_DuckDuckGoAPI.ipynb
ocaml-theme/: README.md  ocaml-mode.js  ocaml-theme.js  ocaml-theme.yaml
src/: JupyterArgs.ml  JupyterArgs.mli  JupyterMain.ml
src/comm/: dune  jupyter_comm.ml  manager.ml  manager.mli  router.ml  stdin.ml
src/kernel/: client.ml  client.mli  connection_info.ml  dune  jupyter_kernel.ml  message_channel.ml  message_channel.mli  zmq_channel.mli
src/main/: dune
src/notebook/: bench.ml  bench.mli  dune  eval.ml  eval.mli  jupyter_notebook.ml  jupyter_notebook.mli  process.ml  process.mli
test/: .gitignore  Fixture.ml  TestJupyter.ml  TestJupyterHmac.ml  TestJupyterKernelMerlin.ml  TestJupyterMessageChannel.ml  TestJupyterNotebook.ml  TestJupyterNotebookCommManager.ml  TestJupyterNotebookUnsafe.ml  TestJupyterReplProcess.ml  TestJupyterReplToploop.ml  TestJupyterZmqChannel.ml  TestUtil.ml
test/completor/: dune  jbuild  test_merlin.ml
test/integration/: .gitignore  dune  jbuild  runtest.ml
test/integration/suite/: core-top.ml  jupyter-archimedes.ml  jupyter-notebook.ml  ppx.ml
test/kernel/: dune  fixture.ml  jbuild  test_hmac.ml  test_kernel.ml  test_message_channel.ml  test_zmq_channel.ml
test/repl/: dune  eval_util.ml  jbuild  test_evaluation.ml  test_process.ml
tests/completor/: dune  test_completor.ml  test_merlin.ml
tests/kernel/: dune  test_message_channel.ml  test_zmq_channel.ml
tests/notebook/: dune  test_bench.ml  test_notebook.ml  test_process.ml
tests/repl/: dune  eval_util.ml  test_evaluation.ml  test_process.ml
travis/: Dockerfile  travis.sh
(+326 files in other folders)
