opam-version: "2.0"
maintainer: [
  "Akinori ABE <aabe.65535@gmail.com>"
]
authors: [
  "Akinori ABE"
]
license: "MIT"
homepage: "https://akabe.github.io/ocaml-jupyter/"
bug-reports: "https://github.com/akabe/ocaml-jupyter/issues"
dev-repo: "git+https://github.com/akabe/ocaml-jupyter.git"

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {build & >= "1.0.0"}
  "jupyter"
  "cairo2" {< "0.6"}
  "archimedes"
]
