opam-version: "1.2"
name: "jupyter"
version: "dev"
maintainer: [
  "Akinori ABE <aabe.65535@gmail.com>"
]
authors: [
  "Akinori ABE"
]
license: "MIT"
homepage: "https://github.com/akabe/ocaml-jupyter"
bug-reports: "https://github.com/akabe/ocaml-jupyter/issues"
dev-repo: "https://github.com/akabe/ocaml-jupyter.git"

available: [ ocaml-version >= "4.02.3" ]
build: [
  [ "ocaml" "setup.ml" "-configure" "--prefix" prefix ]
  [ "ocaml" "setup.ml" "-build" ]
]
install: [
  [ "ocaml" "setup.ml" "-install" ]
]
remove: [
  [ "./kernelspec.sh" "uninstall" ]
  [ "ocamlfind" "remove" "jupyter" ]
  [ "rm" "%{bin}%/ocaml-jupyter-kernel" ]
  [ "rm" "-rf" "%{share}%/ocaml-jupyter" ]
]
depends: [
  "base-threads"
  "base-unix"
  "uuidm"
  "base64"
  "lwt"
  "zmq" {>= "4.0-8"}
  "lwt-zmq"
  "yojson"
  "ppx_deriving_yojson"
  "nocrypto"
  "ocamlfind" {build & >= "1.5.0"}
  "ocamlbuild" {build}
  "cppo" {build}
]

post-messages: [
  "If Jupyter is installed, ocaml-jupyter kernel is already available."
  "Otherwise you setup Jupyter and the OCaml kernel as follows:"
  ""
  "$ pip install jupyter"
  "$ jupyter kernelspec install --name ocaml-jupyter-%{switch}% \\
    %{share}%/ocaml-jupyter"
]
