opam-version: "2.0"
synopsis: "An OCaml kernel for Jupyter"
description: "This provides an OCaml REPL with a great user interface such as markdown/HTML documentation, LaTeX formula by MathJax, and image embedding."
maintainer: [
  "Akinori ABE <aabe.65535@gmail.com>"
]
authors: [
  "Akinori ABE"
]
license: "MIT"
homepage: "https://akabe.github.io/ocaml-jupyter/"
bug-reports: "https://github.com/akabe/ocaml-jupyter/issues"
dev-repo: "git+https://github.com/akabe/ocaml-jupyter.git"

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" {>= "4.04.0" & < "4.15"}
  "base-threads"
  "base-unix"
  "uuidm" {>= "0.9.6"}
  "base64" {>= "3.2.0"}
  "lwt" {>= "4.0.0"}
  "lwt_ppx" {>= "1.0.0"}
  "logs" {>= "0.6.0"}
  "stdint" {>= "0.4.2"}
  "zmq" {>= "5.0.0"}
  "zmq-lwt" {>= "5.0.0"}
  "yojson" {>="1.6.0"}
  "ppx_deriving_yojson" {>= "3.0"}
  "cryptokit" {>= "1.12"}
  "dune" {build & >= "1.0.0"}
  "ounit2" {with-test & >= "2.0.0"}
  "ocp-indent" {with-test & >= "1.7.0"}
]
depopts: [
  "merlin"
]
conflicts: [
  "merlin" {< "3.0.0"}
]

post-messages: [
  "Please run for registration of ocaml-jupyter kernel:"
  ""
  "$ ocaml-jupyter-opam-genspec"
  "$ jupyter kernelspec install --name ocaml-jupyter \\"
  "    %{share}%/jupyter"
  {success}
]
