(executables
 (names       configure)
 (libraries   unix yojson)
 (flags       (:standard
               -w A-4-31-33-34-39-41-42-43-44-45-48-49-50-58
               -safe-string -strict-sequence -strict-formats
               -short-paths)))

;;
;; Common OCaml flags: ocaml_flags.sexp, ocaml_test_flags.sexp
;;

(rule
 (targets ocaml_flags.sexp)
 (deps    configure.exe)
 (action  (run %{deps} -o %{targets}
               -ppx ppx_deriving_yojson
               -ppx lwt_ppx
               -ocamlfind %{bin:ocamlfind}
               -ocaml-flag "-w A-4-31-33-34-39-41-42-43-44-45-48-49-50-58"
               -ocaml-flag "-safe-string -strict-sequence -strict-formats"
               -ocaml-flag "-short-paths")))

(rule
 (targets ocaml_test_flags.sexp)
 (deps    configure.exe)
 (action  (run %{deps} -o %{targets}
               -ppx ppx_deriving.show
               -ocamlfind %{bin:ocamlfind})))

;;
;; kernelspec: kernel.json
;;

(install
 (section bin)
 (package jupyter)
 (files   ocaml-jupyter-opam-genspec))
