(library
 (name        jupyter_kernel)
 (synopsis    "A library for Jupyter kernel client")
 (modes       byte)
 (modules     Jupyter_kernel
              Client
              Message_channel
              Zmq_channel
              Channel_intf
              Connection_info
              Hmac)
 (flags       ((:include %{workspace_root}/config/ocaml_flags.sexp)))
 (preprocess  (pps lwt_ppx ppx_yojson_conv))
 (libraries   jupyter
              jupyter_repl
              jupyter_completor
              jupyter_log
              str
              lwt
              lwt.unix
              yojson
              zmq-lwt
              cryptokit
              ppx_yojson_conv_lib))
