(executables
 (names      test_completor)
 (preprocess (pps lwt_ppx ppx_deriving.show))
 (libraries  jupyter
             jupyter_completor
             oUnit
             ppx_deriving.runtime)
 (flags      ((:include %{workspace_root}/config/ocaml_flags.sexp)
              (:include %{workspace_root}/config/ocaml_test_flags.sexp))))

(alias
 (name   runtest)
 (deps   test_completor.exe)
 (action (chdir %{workspace_root}/test (run %{deps} -runner sequential))))
