;; This performs integration tests.
;; The test suites require installation of `jupyter' and `jupyter-archimedes' packages.

(executables
 (names      runtest)
 (preprocess (pps ppx_deriving_yojson))
 (libraries  jupyter
             unix
             ppx_deriving.runtime)
 (flags      ((:include %{workspace_root}/config/ocaml_flags.sexp)
              (:include %{workspace_root}/config/ocaml_test_flags.sexp))))
