(executables
 (names      test_evaluation
             test_process)
 (modes      byte)
 (preprocess (pps lwt_ppx ppx_deriving.show ppx_deriving_yojson))
 (libraries  jupyter
             jupyter_repl
             oUnit
             ppx_deriving.runtime)
 (flags      ((:include %{workspace_root}/config/ocaml_flags.sexp)
              (:include %{workspace_root}/config/ocaml_test_flags.sexp))))

(alias
 (name   runtest)
 (deps   test_evaluation.bc
         test_process.bc
         ../fixtures/ocamlinit.ml
         ../fixtures/file.bin)
 (action
  (chdir %{workspace_root}/test
         (progn
           (run %{dep:test_evaluation.bc})
           (run %{dep:test_process.bc} -runner sequential)))))
