(executables
 (names      test_completor)
 (preprocess (pps lwt_ppx ppx_deriving.show ppx_yojson_conv))
 (libraries  jupyter
             jupyter_completor
             ounit2)
 (flags      ((:include %{project_root}/config/ocaml_flags.sexp))))

(alias
 (name   runtest)
 (deps   test_completor.exe)
 (action (chdir %{project_root}/test (run %{deps} -runner sequential))))
