(executables
 (names      test_kernel)
 (modes      byte)
 (preprocess (pps lwt_ppx ppx_deriving.show ppx_yojson_conv))
 (libraries  jupyter
             jupyter_kernel
             ounit2)
 (flags      ((:include %{workspace_root}/config/ocaml_flags.sexp))))

(alias
 (name   runtest)
 (deps   test_kernel.bc)
 (action (chdir %{workspace_root}/test (run %{deps} -runner sequential))))
