(executables
 (names      test_evaluation
             test_process)
 (modes      byte)
 (preprocess (pps lwt_ppx ppx_deriving.show ppx_yojson_conv))
 (libraries  jupyter
             jupyter_repl
             ounit2)
 (flags      ((:include %{project_root}/config/ocaml_flags.sexp))))

(alias
 (name   runtest)
 (deps   test_evaluation.bc
         test_process.bc
         ../fixtures/ocamlinit.ml
         ../fixtures/file.bin)
 (action
  (chdir %{project_root}/tests
         (progn
           (run %{dep:test_evaluation.bc})
           (run %{dep:test_process.bc} -runner sequential)))))
