(library
 (name        jupyter)
 (public_name jupyter)
 (synopsis    "The core library module for Jupyter")
 (modules     Jupyter
              Message
              Iopub
              Shell
              Stdin
              Comm
              AnsiCode
              Json
              Version)
 (flags       ((:include %{workspace_root}/config/ocaml_flags.sexp)))
 (preprocess  (pps ppx_yojson_conv))
 (libraries   unix uuidm ppx_yojson_conv_lib))
