(library
 (name        jupyter_notebook)
 (public_name jupyter.notebook)
 (synopsis    "A library for Jupyter notebooks")
 (modes       byte)
 (modules     Jupyter_notebook
              Unsafe)
 (flags       ((:include %{workspace_root}/config/ocaml_flags.sexp)))
 (preprocess  (pps ppx_yojson_conv))
 (libraries   jupyter
              uuidm
              base64
              compiler-libs.common))
